--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
           <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded" alt="hero" src="https://images.pexels.com/photos/6335/man-coffee-cup-pen.jpg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940">
           <div class="text-center lg:w-2/3 w-full">
             <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Aaktakh</h1>
-            <p class="mb-8 leading-relaxed">"Aaktakh" provides you top 10 news of the day. When you click on the pagination at the bottom of the page it will speak the news for you. It is created by <a href="https://arpitalkari.000webhostapp.com">Arpit Alkari</a> using GNEWS api and VoiceRSS api.</p>
+            <p class="mb-8 leading-relaxed">"Aaktakh" provides you top 10 news of the day. When you click on the 'Read All' button at the bottom of the page it will read the news for you. It is created by <a href="https://arpitalkari.000webhostapp.com">Arpit Alkari</a> using WebScraping and VoiceRSS api.</p>
           </div>
         </div>
       </section>
